--- a/sitecopy/trunk/README
+++ b/sitecopy/trunk/README
@@ -27,10 +27,16 @@ sitecopy is:
 The GNOME frontend is:
    Copyright (C) 1999-2000 Lee Mallabone
 Portions are:
-   Copyright (C) 1987-1999 Free Software Foundation, Inc
-   Copyright (c) 1999 Eric S. Raymond
+   Copyright (C) 1987-2004 Free Software Foundation, Inc
+   Copyright (C) 1999-2000 Tommi Komulainen <Tommi.Komulainen@iki.fi>
    Copyright (C) 1997 Janos Farkas (chexum@shadow.banki.hu)
    Copyright (C) 2003 Nobuyuki Tsuchimura <tutimura@nn.iij4u.or.jp>
+   Copyright (C) 2004 Aleix Conchillo Flaque <aleix@member.fsf.org>
+   Copyright (C) 2004 David A Knight <david@screem.org>
+   Copyright (C) 2004 Jiang Lei <tristone@deluxe.ocn.ne.jp>
+   Copyright (C) 2004 Aleix Conchillo Flaque <aleix@member.fsf.org>
+The bundled Expat XML parser is:
+   Copyright (C) 1998 James Clark
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
