* doc/sitecopy.1: Document actual default for symlink handling.

--- a/doc/sitecopy.1
+++ b/doc/sitecopy.1
@@ -533,8 +533,8 @@ or
 to select the mode as appropriate.
 
 The default mode is
-.B ignore,
-i.e. symbolic links found in the local site are ignored.
+.B follow,
+i.e. symbolic links found in the local site are followed.
 
 .SS Symbolic link Maintain Mode
 
