* doc/sitecopy.1: Document tempupload change.

--- a/doc/sitecopy.1
+++ b/doc/sitecopy.1
@@ -408,7 +408,7 @@ have a trailing slash; a valid example is
 
 If the 
 .B tempupload
-option is given, changed files are upload with a ".in." prefix,
+option is given, new or changed files are upload with a ".in." prefix,
 then moved to the true filename when the upload is complete.
 
 .SS File State
