--- a/sitecopy/trunk/NEWS
+++ b/sitecopy/trunk/NEWS
@@ -1,3 +1,9 @@
+Changes in release 0.15.1:
+* Updated Italian translation (Cristian Rigamonti).
+* FTP: fix newline handling issues for ASCII file transfers.
+* Update to neon 0.25.0:
+ - fix regressions in WebDAV path-escaping
+
 Changes in release 0.15.0:
 * Add SFTP support from Nobuyuki Tsuchimura using "protocol sftp".
 * FTP: Ignore symlinks in fetch mode; fix some fetch mode error handling.
