--- a/sitecopy/trunk/THANKS
+++ b/sitecopy/trunk/THANKS
@@ -20,7 +20,7 @@ James Youngman <jay@gnu.org>
 Jonathan Paisley <jp@dcs.gla.ac.uk>
 Juergen Daubert <Juergen.Daubert@t-online.de>
 Karl Ove Hufthammer <huftis@bigfoot.com>
-Lee Mallabone <lee0@callnetuk.com>
+Lee Mallabone <lee@fonicmonkey.net>
 Masayuki Hatta <mhatta@debian.org>
 Michael Lindner <mikel@att.net>
 Nathan Hand <Nathan.Hand@defence.gov.au>
