Add client certificate support for DAV driver:
* src/sites.h (struct site): Add client_cert member.

* src/rcfile.c (rcfile_read): Parse client-cert option.
(rcfile_verify): Resolve $HOME-relative client-cert.

* src/davdriver.c (init): Decrypt and configure client-cert.

* src/frontend.h (fe_decrypt_clicert): New function.

* src/console_fe.c (fe_decrypt_clicert): Implement.

--- a/TODO
+++ b/TODO
@@ -1,6 +1,9 @@
 						-*- text -*-
 Bugs:
 
+- "sitecopy foo bar" always process foo and bar in the order they
+  are specified in the rcfile
+
 - review w.r.t djb's FTP interop notes, http://cr.yp.to/ftp.html
 
 - add support for MLST, latest draft:
