--- a/sitecopy/trunk/NEWS
+++ b/sitecopy/trunk/NEWS
@@ -1,3 +1,7 @@
+Changes in release 0.16.3:
+* DAV: Add PKCS#12 client cert support; "client-cert /path/to/cert.p12"
+* Update to neon 0.25.5.
+
 Changes in release 0.16.2:
 * Fix over-eager move/rename algorithm when handling a
  delete of one of a set of identical files.
