--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in release 0.16.4:
+* DAV: Fix SSL cert caching to avoid repeated prompts.
+* Update to neon 0.28.3 and support neon 0.24.x through 0.28.x.
+
 Changes in release 0.16.3:
 * DAV: Add PKCS#12 client cert support; "client-cert /path/to/cert.p12"
 * Update to neon 0.26.0 (0.24.x and 0.25.x still supported).
