--- a/sitecopy/trunk/NEWS
+++ b/sitecopy/trunk/NEWS
@@ -1,3 +1,6 @@
+Changes in release 0.16.6:
+* DAV: Fix crash with progress bar enabled with neon 0.27/0.28.
+
 Changes in release 0.16.5:
 * DAV: Fix SSL cert caching to avoid repeated prompts.
 * Update to neon 0.28.3 and support neon 0.24.x through 0.28.x.
